# preditiva-licitacoes-schemas

./: .gitignore  pyproject.toml
preditiva_licitacoes_schemas/: __init__.py  licitacao.py  orgao.py  produto.py
