[tool.poetry]
name = "preditiva-licitacoes-schemas"
version = "0.1.0"
description = ""
authors = ["Allan Garcia <allan.garcia.agcs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
